# Aquila

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  api.md  package.json
app/: .env.template  Cargo.toml  README.md
app/src/: config.rs  main.rs  schema.rs
app/src/db/: cell_info.rs  data_records.rs  data_stats.rs  mod.rs  roi_info.rs
app/src/routes/: cell_info.rs  data_records.rs  data_stats.rs  mod.rs  response.rs  roi_info.rs
scripts/: .env.template  add_all_data.py  data_table.py  requirements.txt  setup.cfg  test.ipynb  test.json
scripts/sscmap/: __init__.py  db.py  guards.py  meta.py  models.py  records.py  utils.py
ui/: .babelrc  .env.template  README.md  package.json
ui/components/: AboutInfoBox.js  DBStats.js  Footer.js  Header.js  RecordsTable.js  layout.js
ui/components/DataBox/: DataRecordsBox.js  DataStatsBox.js  ROIBox.js
ui/components/SmallComponents/: ROICard.js  ROIMetaTable.js
ui/components/Visualization/: CellComponentsPie.js  CellDensityBoxPlot.js  CellInteractionMap.js  MarkerCoExpMap.js  ROICellMap.js  ROICellMapWithSwitch.js  ROIMarkerMap.js  ROIMarkerMapWithSelector.js  assignColors.js
ui/data/: api.js
ui/pages/: index.js  layout.js
ui/pages/about/: index.js
ui/pages/data/: [data_id].js
