[package]
name = "hello-world-actix"
version = "0.1.0"
authors = ["Mr-Milk <zym.zym1220@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
config = "0.10.1"
serde = "1.0.117"
serde_json = "1.0.59"
sqlx = { version = "0.4.1", features = [ "runtime-actix-native-tls", "postgres", "macros", "json"] }
dotenv = "0.15.0"
anyhow = "1.0.34"
derive_more = "0.99.11"
listenfd = "0.3"
