[package]
name = "app"
version = "0.1.0"
authors = ["Mr-Milk <zym.zym1220@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-files = "0.5.0"
config = "0.10.1"
serde = "1.0.117"
serde_json = "1.0.59"
sqlx = { version = "0.4.1", features = [ "runtime-actix-native-tls", "postgres", "macros", "json", "uuid"] }
uuid = { version = "0.8", features = ["serde"] }
dotenv = "0.15.0"
anyhow = "1.0.34"
derive_more = "0.99.11"
log = "0.4"
env_logger = "0.8.3"

