[metadata]
name = sscmap
version = 0.0.1
author = Mr.Milk
author_email = yb97643@um.edu.mo
description = "helper scripts for Aquila"
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .